--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "redux-mock-store": "^1.5.4",
     "uri-js": "^4.4.0"
   },
   "scripts": {
